# boorubot

./: .env.example  .gitignore  Dockerfile  README.md  app.py  bot.py  database.py  docker-compose.yml  entrypoint.sh  pyproject.toml  repo.py  requirements.txt
.github/workflows/: deploy.yml  telegram.yml
app/: commands.py  config.py
app/api/: danbooru_client.py
app/callbacks/: check_posts.py  check_timer.py  clear_filter.py  delete_subscribe.py  popular_posts.py  update_now.py
app/dialogs/: main_dialog.py
app/filters/: is_admin.py
app/getters/: main_window.py  subscribes_selector.py
app/handlers/: add.py  add_subscribe.py  delete.py  start.py  subs.py  subscribes.py  unknown_errors.py
app/middlewares/: danbooru.py  db.py  repo.py  scheduler.py
app/models/: danbooru.py  posts.py  subscriptions.py
app/services/: danbooru.py  repo.py  repository.py  schedules.py
app/states/: danmenu.py
app/windows/: adding_window.py  delete_sub.py  deleting_window.py  main_window.py  sublist_window.py
database/: init.sql
