[tool.poetry]
name = "danboorubot"
version = "6.6.6"
description = ""
authors = ["Herman Guilliman <hermanguilliman@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
apscheduler = "^3.10.4"
aiogram = "^3.1.1"
aiogram-dialog = "^2.0.0"
sqlalchemy = "^2.0.22"
aiosqlite = "^0.19.0"
environs = "^9.5.0"
aiohttp = "^3.9.1"
pydantic = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
