[project]
name = "danboorubot"
version = "6.6.6"
description = "Hentai bot"
authors = [{ name = "Herman Guilliman", email = "hermanguilliman@proton.me" }]
requires-python = ">=3.13, <4"
readme = "README.md"
dependencies = [
    "python-dotenv>=1.0.0,<2",
    "loguru>=0.7.2,<0.8",
    "apscheduler>=3.10.4,<4",
    "aiogram>=3.1.1,<4",
    "aiogram-dialog>=2.0.0,<3",
    "sqlalchemy>=2.0.22,<3",
    "aiosqlite>=0.19.0,<0.20",
    "environs>=9.5.0,<10",
    "aiohttp>=3.9.1,<4",
    "pydantic>=2.5.2,<3",
    "pytz~=2025.1",
    "tzdata>=2025.2",
]

[dependency-groups]
dev = ["ruff>=0.12.1,<0.13"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
